--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -3,6 +3,8 @@
 #使用指南：一個讀音可以同時存在有多種唔同嘅正寫方式，唔同嘅正寫方法用斜槓"/"符號隔開
 #ay同ê正寫嘅韻腹發音相同，呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用ê，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ay正寫
 #ơi同y正寫嘅韻腹發音相同, 呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用y，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音、冇韻首嘅音節，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ơi正寫
+#vai同oai音節正寫嘅韻腹發音喺廣州音入面相同, 呢兩種正寫嘅分別係，有實際意義嘅詞語或者以v作為韻首嘅情況用vai，用嚟表示「㗏」[ʔwaːj]或者[waːj]語氣詞嘅音節可以使用oai正寫
+#vy同uây音節正寫嘅韻腹發音喺廣州音入面相同, 呢兩種正寫嘅分別係，有實際意義嘅詞語或者以v作為韻首嘅情況用vy，用嚟表示「喂」[ʔwəj]或者[wəj]語氣詞嘅音節可以使用uây正寫
 #韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
 #version: 12/6/2025
 #author: cathaylab
@@ -30,10 +32,10 @@
 （廣州音）	响	hưởng
 （廣州音）	响	hảy
 （廣州音）	威	vai
-（廣州音）	威	uy
-（台山音）	威	úy
-（欽州音）	威	uy
-（南寧音）	威	uy
+（廣州音）	威	uy/vy
+（台山音）	威	úy/vý
+（欽州音）	威	uy/vy
+（南寧音）	威	uy/vy
 （廣州音）	吖	a
 （廣州音）	吖	ơ
 （台山音）	吖	á
@@ -11722,7 +11724,7 @@
 （台山音）	豖	truc
 （廣州音）	趗	xuc
 （廣州音）	踀	xuc
-（廣州音）	踓	ũy/vỹ
+（廣州音）	踓	vỹ
 （廣州音）	踓	xuc
 （廣州音）	踧	chuc
 （廣州音）	踧	xuc
@@ -12130,11 +12132,11 @@
 （台山音）	藂	xùng
 （南寧音）	藂	xùng
 （通用版）	虫	trùng
-（廣州音）	虫	ủy
+（廣州音）	虫	ủy/vỷ
 （廣州音）	虫	xùng
 （台山音）	虫	trùng
 （南寧音）	虫	xùng
-（南寧音）	虫	ủy
+（南寧音）	虫	ủy/vỷ
 （廣州音）	蝩	chung
 （廣州音）	蝩	xùng
 （通用版）	蟲	trùng
@@ -16769,7 +16771,7 @@
 （南寧音）	華	vạ
 （廣州音）	蒊	pha
 （廣州音）	蘤	pha
-（廣州音）	蘤	ũy/vỹ
+（廣州音）	蘤	vỹ
 （廣州音）	錵	pha
 （廣州音）	𤾸	pha
 （廣州音）	划	phá
@@ -16806,12 +16808,12 @@
 （廣州音）	凷	phái
 （廣州音）	勓	phái
 （廣州音）	喟	phái
-（廣州音）	喟	úy
-（廣州音）	喟	ụy/vỵ
-（廣州音）	喟	ủy
-（台山音）	喟	ủy
+（廣州音）	喟	úy/vý
+（廣州音）	喟	vỵ
+（廣州音）	喟	ủy/vỷ
+（台山音）	喟	ủy/vỷ
 （欽州音）	喟	vè
-（欽州音）	喟	ủy
+（欽州音）	喟	ủy/vỷ
 （南寧音）	喟	ụy
 （廣州音）	噲	phái
 （台山音）	噲	khói
@@ -17224,13 +17226,13 @@
 （南寧音）	暉	(文)phay/(文)phê
 （南寧音）	暉	(白)uy
 （廣州音）	椲	phay
-（廣州音）	椲	ũy/vỹ
+（廣州音）	椲	vỹ
 （廣州音）	楎	phay
 （廣州音）	楎	vần
 （廣州音）	瀈	phay
 （廣州音）	灳	phay
 （廣州音）	煇	phay
-（廣州音）	煇	uy
+（廣州音）	煇	uy/vy
 （廣州音）	煇	vận
 （台山音）	煇	phún
 （台山音）	煇	phí
@@ -19424,13 +19426,13 @@
 （廣州音）	烣	phui
 （廣州音）	睳	phui
 （廣州音）	虺	phui
-（廣州音）	虺	ủy
+（廣州音）	虺	ủy/vỷ
 （台山音）	虺	phói
 （台山音）	虺	phỉ
 （欽州音）	虺	phui
-（欽州音）	虺	ủy
+（欽州音）	虺	ủy/vỷ
 （南寧音）	虺	phôi
-（南寧音）	虺	ủy
+（南寧音）	虺	ủy/vỷ
 （廣州音）	蝰	phui
 （台山音）	蝰	phói
 （欽州音）	蝰	phui
@@ -19456,14 +19458,14 @@
 （廣州音）	䏨	phủi
 （廣州音）	䫥	phủi
 （廣州音）	洧	phủi
-（廣州音）	洧	ũy/vỹ
-（台山音）	洧	ủy
+（廣州音）	洧	vỹ
+（台山音）	洧	ủy/vỷ
 （南寧音）	洧	phổi
 （廣州音）	燘	mũi
 （廣州音）	燘	phủi
 （廣州音）	痏	phủi
-（廣州音）	痏	ũy/vỹ
-（台山音）	痏	ủy
+（廣州音）	痏	vỹ
+（台山音）	痏	ủy/vỷ
 （南寧音）	痏	phổi
 （廣州音）	賄	khủi
 （廣州音）	賄	phủi
@@ -19471,9 +19473,9 @@
 （欽州音）	賄	phủi
 （南寧音）	賄	phổi
 （廣州音）	鮪	phủi
-（廣州音）	鮪	ũy/vỹ
-（台山音）	鮪	ủy
-（欽州音）	鮪	ủy
+（廣州音）	鮪	vỹ
+（台山音）	鮪	ủy/vỷ
+（欽州音）	鮪	ủy/vỷ
 （南寧音）	鮪	phổi
 （廣州音）	㑰	phúi
 （廣州音）	㳷	phúi
@@ -25373,10 +25375,10 @@
 （欽州音）	攰	kùi
 （南寧音）	攰	quị
 （廣州音）	癐	quị
-（廣州音）	癐	uy
+（廣州音）	癐	uy/vy
 （欽州音）	癐	kùi
 （南寧音）	癐	quị
-（南寧音）	癐	uy
+（南寧音）	癐	uy/vy
 （廣州音）	㘲	kuc/cuc
 （廣州音）	㥌	kuc/cuc
 （廣州音）	㩴	kuc/cuc
@@ -26154,9 +26156,9 @@
 （廣州音）	帰	qui
 （台山音）	帰	ký
 （廣州音）	廆	qui
-（廣州音）	廆	ủy
+（廣州音）	廆	ủy/vỷ
 （南寧音）	廆	quy
-（南寧音）	廆	ủy
+（南寧音）	廆	ủy/vỷ
 （廣州音）	櫷	qui
 （廣州音）	歸	khúy
 （廣州音）	歸	qui
@@ -26171,14 +26173,14 @@
 （南寧音）	洼	va
 （廣州音）	溈	qui
 （台山音）	溈	ký
-（台山音）	溈	ùy/vỳ
+（台山音）	溈	vỳ
 （欽州音）	溈	ùy
 （南寧音）	溈	quy
 （廣州音）	潙	qui
 （台山音）	潙	ký
 （欽州音）	潙	ùy
 （南寧音）	潙	quy
-（廣州音）	珪	qoai
+（廣州音）	珪	quy
 （廣州音）	珪	qui
 （欽州音）	珪	qui
 （南寧音）	珪	quy
@@ -26808,7 +26810,7 @@
 （欽州音）	𡲬	quật
 （南寧音）	𡲬	quật
 （廣州音）	𥇣	quật
-（廣州音）	𠺌	qoa
+（廣州音）	𠺌	que
 （廣州音）	𪚩	qui
 （廣州音）	㶁	quich
 （廣州音）	㷦	quich
@@ -27086,7 +27088,7 @@
 （廣州音）	囗	quóc
 （廣州音）	囗	ùy
 （台山音）	囗	koc
-（台山音）	囗	ùy/vỳ
+（台山音）	囗	vỳ
 （欽州音）	囗	ùy
 （廣州音）	囯	quóc
 （廣州音）	囶	quóc
@@ -29705,7 +29707,7 @@
 （廣州音）	圩	hui
 （廣州音）	圩	ùy
 （廣州音）	圩	ừ
-（台山音）	圩	ùy/vỳ
+（台山音）	圩	vỳ
 （欽州音）	圩	hi
 （南寧音）	圩	hư
 （南寧音）	圩	ùy
@@ -30629,11 +30631,11 @@
 （廣州音）	磑	ngày
 （廣州音）	磑	ngòi
 （廣州音）	磑	ngọi
-（廣州音）	磑	úy
+（廣州音）	磑	úy/vý
 （南寧音）	磑	(白)hài
 （南寧音）	磑	(白)ngay
 （南寧音）	磑	ngòi
-（南寧音）	磑	úy
+（南寧音）	磑	úy/vý
 （廣州音）	輆	hỏi
 （廣州音）	輆	khói
 （廣州音）	酼	hỏi
@@ -33785,7 +33787,7 @@
 （南寧音）	鋭	(又)yỗi
 （南寧音）	鋭	yội
 （廣州音）	鏸	sụi
-（廣州音）	鏸	ụy/vỵ
+（廣州音）	鏸	vỵ
 （廣州音）	鏸	yụi
 （廣州音）	𠮏	yụi
 （廣州音）	𥈠	yụi
@@ -37472,7 +37474,7 @@
 （南寧音）	癰	yung
 （廣州音）	維	ùy
 （廣州音）	維	yung
-（台山音）	維	ùy/vỳ
+（台山音）	維	vỳ
 （欽州音）	維	ùy
 （南寧音）	維	ùy
 （廣州音）	翁	yung
@@ -39130,10 +39132,10 @@
 （廣州音）	耎	oãn
 （台山音）	耎	ngún
 （廣州音）	薳	oãn
-（廣州音）	薳	ũy/vỹ
-（廣州音）	薳	ủy
+（廣州音）	薳	vỹ
+（廣州音）	薳	ủy/vỷ
 （南寧音）	薳	yoãn
-（南寧音）	薳	ủy
+（南寧音）	薳	ủy/vỷ
 （廣州音）	贙	oãn
 （廣州音）	贙	yoạn
 （廣州音）	軟	oãn
@@ -39215,16 +39217,16 @@
 （廣州音）	乚	oát
 （廣州音）	乚	yoạt
 （廣州音）	噦	oát
-（廣州音）	噦	úy
+（廣州音）	噦	úy/vý
 （廣州音）	噦	yoạt
-（台山音）	噦	úy
+（台山音）	噦	úy/vý
 （台山音）	噦	oạt
-（欽州音）	噦	úy
+（欽州音）	噦	úy/vý
 （欽州音）	噦	yiệt
 （欽州音）	噦	ọt
 （南寧音）	噦	oạt
 （南寧音）	噦	(語)ụt
-（南寧音）	噦	úy
+（南寧音）	噦	úy/vý
 （南寧音）	噦	(語)vẻ
 （廣州音）	妜	oát
 （廣州音）	釔	oát
@@ -39330,7 +39332,7 @@
 （南寧音）	聿	(又)loạt
 （南寧音）	聿	vật
 （廣州音）	芛	yoạt
-（欽州音）	芛	ủy
+（欽州音）	芛	ủy/vỷ
 （廣州音）	茓	yoạt
 （台山音）	茓	oạt
 （南寧音）	茓	oạt
@@ -40940,7 +40942,7 @@
 （南寧音）	膾	khúy
 （廣州音）	薈	khúi
 （廣州音）	薈	khủi
-（廣州音）	薈	úy
+（廣州音）	薈	úy/vý
 （廣州音）	薈	vúi
 （廣州音）	薈	vụi
 （台山音）	薈	vọi
@@ -41037,7 +41039,7 @@
 （欽州音）	活	vột
 （南寧音）	活	vột
 （廣州音）	濊	khót
-（廣州音）	濊	úy
+（廣州音）	濊	úy/vý
 （廣州音）	眓	khót
 （南寧音）	眓	phốt
 （廣州音）	筈	khót
@@ -41178,7 +41180,7 @@
 （廣州音）	聧	khùy
 （廣州音）	蘬	khuy
 （廣州音）	蘬	khủy
-（廣州音）	蘬	ủy
+（廣州音）	蘬	ủy/vỷ
 （廣州音）	虧	khuy
 （台山音）	虧	khý
 （欽州音）	虧	khuy
@@ -41304,9 +41306,9 @@
 （廣州音）	隗	khùy
 （廣州音）	隗	ngày/ngề
 （廣州音）	隗	ngãy
-（廣州音）	隗	ũy/vỹ
+（廣州音）	隗	vỹ
 （台山音）	隗	khỳ
-（台山音）	隗	ủy
+（台山音）	隗	ủy/vỷ
 （欽州音）	隗	ngảy
 （南寧音）	隗	khùy
 （南寧音）	隗	ngãy
@@ -41506,7 +41508,7 @@
 （欽州音）	權	khiền
 （南寧音）	權	khoàn
 （廣州音）	腃	khoàn
-（廣州音）	腃	úy
+（廣州音）	腃	úy/vý
 （廣州音）	蜷	khoàn
 （台山音）	蜷	khùn
 （欽州音）	蜷	khiền
@@ -43836,8 +43838,8 @@
 （廣州音）	蘽	lũi
 （南寧音）	蘽	lỗi
 （廣州音）	蜼	lũi
-（廣州音）	蜼	ụy/vỵ
-（廣州音）	蜼	ủy
+（廣州音）	蜼	vỵ
+（廣州音）	蜼	ủy/vỷ
 （廣州音）	蠝	lũi
 （廣州音）	誄	lũi
 （廣州音）	誄	lọi
@@ -43875,7 +43877,7 @@
 （廣州音）	䮑	lụi
 （廣州音）	勴	lụi
 （廣州音）	彙	lụi
-（廣州音）	彙	ụy/vỵ
+（廣州音）	彙	vỵ
 （廣州音）	彙	vụi
 （台山音）	彙	vọi
 （欽州音）	彙	vùi
@@ -50738,9 +50740,9 @@
 （南寧音）	餒	nỗi
 （廣州音）	餧	nõi
 （廣州音）	餧	nũi
-（廣州音）	餧	úy
+（廣州音）	餧	úy/vý
 （南寧音）	餧	nỗi
-（南寧音）	餧	úy
+（南寧音）	餧	úy/vý
 （廣州音）	鮾	nũi
 （廣州音）	鯘	nũi
 （廣州音）	㨅	nụi
@@ -51233,7 +51235,7 @@
 （南寧音）	巍	ngày
 （廣州音）	桅	ngày
 （廣州音）	桅	ùy
-（台山音）	桅	ùy/vỳ
+（台山音）	桅	vỳ
 （欽州音）	桅	ùy
 （南寧音）	桅	ngày
 （廣州音）	棿	ngày/ngề
@@ -51379,7 +51381,7 @@
 （南寧音）	詣	ngạy/ngệ
 （廣州音）	誽	ngạy/ngệ
 （廣州音）	讆	ngạy/ngệ
-（廣州音）	讆	ụy/vỵ
+（廣州音）	讆	vỵ
 （廣州音）	讛	ngạy/ngệ
 （廣州音）	豙	ngạy/ngệ
 （廣州音）	驇	ngạy/ngệ
@@ -56861,7 +56863,7 @@
 （廣州音）	娷	sụi
 （廣州音）	嬘	sụi
 （廣州音）	彗	sụi
-（廣州音）	彗	ụy/vỵ
+（廣州音）	彗	vỵ
 （台山音）	彗	phị
 （欽州音）	彗	vùi
 （南寧音）	彗	ụy
@@ -56869,10 +56871,10 @@
 （廣州音）	旞	sụi
 （南寧音）	旞	sội
 （廣州音）	槥	sụi
-（廣州音）	槥	ụy/vỵ
+（廣州音）	槥	vỵ
 （台山音）	槥	phị
 （廣州音）	檅	sụi
-（廣州音）	檅	ụy/vỵ
+（廣州音）	檅	vỵ
 （廣州音）	檖	sụi
 （廣州音）	櫘	sụi
 （廣州音）	澻	sụi
@@ -56918,7 +56920,7 @@
 （廣州音）	穟	sụi
 （南寧音）	穟	sội
 （廣州音）	篲	sụi
-（廣州音）	篲	ụy/vỵ
+（廣州音）	篲	vỵ
 （台山音）	篲	phị
 （通用版）	粋	slụi
 （廣州音）	粋	sụi
@@ -56930,7 +56932,7 @@
 （欽州音）	萃	xùi
 （南寧音）	萃	xối
 （廣州音）	蔧	sụi
-（廣州音）	蔧	ụy/vỵ
+（廣州音）	蔧	vỵ
 （台山音）	蔧	phị
 （廣州音）	襚	sụi
 （南寧音）	襚	sội
@@ -56944,7 +56946,7 @@
 （欽州音）	遂	slùi
 （南寧音）	遂	sội
 （廣州音）	鏏	sụi
-（廣州音）	鏏	ụy/vỵ
+（廣州音）	鏏	vỵ
 （南寧音）	鏏	ụy
 （廣州音）	鐆	sụi
 （廣州音）	鐩	sụi
@@ -56959,7 +56961,7 @@
 （廣州音）	𤎩	sụi
 （廣州音）	𤭢	sụi
 （廣州音）	𥶙	sụi
-（廣州音）	𥶙	ụy/vỵ
+（廣州音）	𥶙	vỵ
 （廣州音）	𨪂	sụi
 （廣州音）	㡄	sun
 （廣州音）	㨚	sun
@@ -61864,7 +61866,7 @@
 （南寧音）	妥	(又)thỏ
 （南寧音）	妥	thõ
 （廣州音）	撱	thỏ
-（廣州音）	撱	ũy/vỹ
+（廣州音）	撱	vỹ
 （廣州音）	橢	thõ
 （廣州音）	橢	thỏ
 （台山音）	橢	hõ
@@ -62179,7 +62181,7 @@
 （欽州音）	摥	thóng
 （南寧音）	摥	thóng
 （廣州音）	熨	thóng
-（廣州音）	熨	úy
+（廣州音）	熨	úy/vý
 （廣州音）	熨	vât
 （廣州音）	熨	vận
 （台山音）	熨	hóng
@@ -62555,7 +62557,7 @@
 （台山音）	嗵	hủng
 （南寧音）	嗵	thung
 （廣州音）	囲	thung
-（台山音）	囲	ùy/vỳ
+（台山音）	囲	vỳ
 （廣州音）	樋	thung
 （廣州音）	熥	thung
 （台山音）	熥	húng
@@ -62988,16 +62990,16 @@
 （廣州音）	諙	vạ
 （廣州音）	譮	vạ
 （廣州音）	黊	vạ
-（廣州音）	㗏	vai
-（廣州音）	㗏	uy
+（廣州音）	㗏	vai/oai
+（廣州音）	㗏	uy/uây
 （廣州音）	㛻	vai
 （廣州音）	䴜	vai
 （廣州音）	崴	vai
-（廣州音）	崴	uy
+（廣州音）	崴	uy/vy
 （廣州音）	崴	vải
-（台山音）	崴	úy
-（欽州音）	崴	uy
-（南寧音）	崴	uy
+（台山音）	崴	úy/vý
+（欽州音）	崴	uy/vy
+（南寧音）	崴	uy/vy
 （廣州音）	瀤	vai
 （廣州音）	瀤	vài
 （廣州音）	竵	vai
@@ -63039,9 +63041,9 @@
 （台山音）	壞	vại
 （欽州音）	壞	vài
 （南寧音）	壞	vại
-（廣州音）	恚	úy
+（廣州音）	恚	úy/vý
 （廣州音）	恚	vại
-（廣州音）	恚	ụy/vỵ
+（廣州音）	恚	vỵ
 （台山音）	恚	phị
 （欽州音）	恚	ùy
 （南寧音）	恚	ụy
@@ -63283,234 +63285,234 @@
 （廣州音）	螖	vạt
 （台山音）	螖	vạt
 （欽州音）	螖	vạt
-（廣州音）	㙎	uy
-（廣州音）	㣦	uy
-（廣州音）	㮃	uy
-（廣州音）	䫋	uy
-（廣州音）	䴧	uy
-（廣州音）	倭	uy
+（廣州音）	㙎	uy/vy
+（廣州音）	㣦	uy/vy
+（廣州音）	㮃	uy/vy
+（廣州音）	䫋	uy/vy
+（廣州音）	䴧	uy/vy
+（廣州音）	倭	uy/vy
 （廣州音）	倭	vo
-（廣州音）	倭	ủy
+（廣州音）	倭	ủy/vỷ
 （廣州音）	倭	vỏ
 （台山音）	倭	vó
-（台山音）	倭	ủy
+（台山音）	倭	ủy/vỷ
 （欽州音）	倭	vo
-（南寧音）	倭	uy
+（南寧音）	倭	uy/vy
 （南寧音）	倭	vo
 （南寧音）	倭	vỏ
-（廣州音）	喴	uy
+（廣州音）	喴	uy/vy
 （廣州音）	喴	vi
-（欽州音）	喴	uy
-（廣州音）	委	uy
-（廣州音）	委	ủy
-（台山音）	委	ủy
-（欽州音）	委	uy
-（欽州音）	委	ủy
-（南寧音）	委	uy
-（南寧音）	委	ủy
-（廣州音）	媙	uy
-（欽州音）	媙	uy
-（南寧音）	媙	uy
-（廣州音）	揻	uy
-（廣州音）	楲	uy
-（廣州音）	痿	uy
-（廣州音）	痿	ủy
-（台山音）	痿	ủy
-（欽州音）	痿	ủy
-（南寧音）	痿	ủy
-（廣州音）	縅	uy
-（廣州音）	萎	uy
-（廣州音）	萎	úy
-（廣州音）	萎	ủy
-（台山音）	萎	ủy
-（欽州音）	萎	ủy
-（南寧音）	萎	ủy
-（廣州音）	葳	uy
-（台山音）	葳	ủy
-（欽州音）	葳	uy
-（南寧音）	葳	uy
-（廣州音）	蜲	uy
-（廣州音）	蜲	ủy
-（廣州音）	蝛	uy
-（南寧音）	蝛	uy
-（廣州音）	蟡	uy
-（廣州音）	覣	uy
-（南寧音）	覣	uy
-（廣州音）	逶	uy
-（廣州音）	逶	ủy
-（台山音）	逶	ủy
-（欽州音）	逶	uy
-（南寧音）	逶	uy
-（廣州音）	隇	uy
-（廣州音）	鰃	uy
+（欽州音）	喴	uy/vy
+（廣州音）	委	uy/vy
+（廣州音）	委	ủy/vỷ
+（台山音）	委	ủy/vỷ
+（欽州音）	委	uy/vy
+（欽州音）	委	ủy/vỷ
+（南寧音）	委	uy/vy
+（南寧音）	委	ủy/vỷ
+（廣州音）	媙	uy/vy
+（欽州音）	媙	uy/vy
+（南寧音）	媙	uy/vy
+（廣州音）	揻	uy/vy
+（廣州音）	楲	uy/vy
+（廣州音）	痿	uy/vy
+（廣州音）	痿	ủy/vỷ
+（台山音）	痿	ủy/vỷ
+（欽州音）	痿	ủy/vỷ
+（南寧音）	痿	ủy/vỷ
+（廣州音）	縅	uy/vy
+（廣州音）	萎	uy/vy
+（廣州音）	萎	úy/vý
+（廣州音）	萎	ủy/vỷ
+（台山音）	萎	ủy/vỷ
+（欽州音）	萎	ủy/vỷ
+（南寧音）	萎	ủy/vỷ
+（廣州音）	葳	uy/vy
+（台山音）	葳	ủy/vỷ
+（欽州音）	葳	uy/vy
+（南寧音）	葳	uy/vy
+（廣州音）	蜲	uy/vy
+（廣州音）	蜲	ủy/vỷ
+（廣州音）	蝛	uy/vy
+（南寧音）	蝛	uy/vy
+（廣州音）	蟡	uy/vy
+（廣州音）	覣	uy/vy
+（南寧音）	覣	uy/vy
+（廣州音）	逶	uy/vy
+（廣州音）	逶	ủy/vỷ
+（台山音）	逶	ủy/vỷ
+（欽州音）	逶	uy/vy
+（南寧音）	逶	uy/vy
+（廣州音）	隇	uy/vy
+（廣州音）	鰃	uy/vy
 （南寧音）	鰃	vôi
-（廣州音）	鰄	uy
-（廣州音）	𨂿	uy
-（廣州音）	𨩆	uy
-（廣州音）	㕟	ủy
-（廣州音）	㩓	ủy
-（廣州音）	㷐	ủy
-（廣州音）	䃣	ủy
-（廣州音）	䍴	ủy
-（廣州音）	䛼	ủy
-（廣州音）	䦱	ủy
-（廣州音）	位	ụy/vỵ
-（廣州音）	位	ủy
-（台山音）	位	ụy/vỵ
+（廣州音）	鰄	uy/vy
+（廣州音）	𨂿	uy/vy
+（廣州音）	𨩆	uy/vy
+（廣州音）	㕟	ủy/vỷ
+（廣州音）	㩓	ủy/vỷ
+（廣州音）	㷐	ủy/vỷ
+（廣州音）	䃣	ủy/vỷ
+（廣州音）	䍴	ủy/vỷ
+（廣州音）	䛼	ủy/vỷ
+（廣州音）	䦱	ủy/vỷ
+（廣州音）	位	vỵ
+（廣州音）	位	ủy/vỷ
+（台山音）	位	vỵ
 （欽州音）	位	ùy
 （南寧音）	位	(白)ủy
 （南寧音）	位	ụy
-（廣州音）	卉	ũy/vỹ
-（廣州音）	卉	ủy
+（廣州音）	卉	vỹ
+（廣州音）	卉	ủy/vỷ
 （台山音）	卉	phỉ
-（欽州音）	卉	ủy
-（南寧音）	卉	ủy
+（欽州音）	卉	ủy/vỷ
+（南寧音）	卉	ủy/vỷ
 （廣州音）	唯	ùy
-（廣州音）	唯	ũy/vỹ
-（廣州音）	唯	ủy
-（台山音）	唯	ùy/vỳ
+（廣州音）	唯	vỹ
+（廣州音）	唯	ủy/vỷ
+（台山音）	唯	vỳ
 （欽州音）	唯	ùy
-（南寧音）	唯	ủy
+（南寧音）	唯	ủy/vỷ
 （南寧音）	唯	ùy
-（廣州音）	喂	úy
-（廣州音）	喂	ụy/vỵ
-（廣州音）	喂	ủy
-（台山音）	喂	ụy/vỵ
-（欽州音）	喂	úy
-（欽州音）	喂	ủy
-（南寧音）	喂	(語)ủy
-（南寧音）	喂	úy
-（廣州音）	壝	ủy
-（廣州音）	寪	ủy
-（廣州音）	崣	ủy
-（廣州音）	檓	ủy
-（廣州音）	毀	ủy
+（廣州音）	喂	úy/uây
+（廣州音）	喂	vỵ
+（廣州音）	喂	ủy/uẩy
+（台山音）	喂	vỵ
+（欽州音）	喂	úy/uấy
+（欽州音）	喂	ủy/vỷ
+（南寧音）	喂	(語)ủy/uẩy
+（南寧音）	喂	úy/vý
+（廣州音）	壝	ủy/vỷ
+（廣州音）	寪	ủy/vỷ
+（廣州音）	崣	ủy/vỷ
+（廣州音）	檓	ủy/vỷ
+（廣州音）	毀	ủy/vỷ
 （台山音）	毀	phỉ
 （欽州音）	毀	phủi
-（南寧音）	毀	ủy
-（廣州音）	毇	ủy
-（廣州音）	燬	ủy
+（南寧音）	毀	ủy/vỷ
+（廣州音）	毇	ủy/vỷ
+（廣州音）	燬	ủy/vỷ
 （台山音）	燬	phỉ
-（南寧音）	燬	ủy
+（南寧音）	燬	ủy/vỷ
 （廣州音）	猥	vui
-（廣州音）	猥	ủy
+（廣州音）	猥	ủy/vỷ
 （廣州音）	猥	vủi
-（台山音）	猥	úy
+（台山音）	猥	úy/vý
 （欽州音）	猥	vui
-（南寧音）	猥	úy
-（廣州音）	碨	úy
-（廣州音）	碨	ủy
-（台山音）	碨	ụy/vỵ
-（南寧音）	碨	ủy
-（南寧音）	碨	úy
-（廣州音）	腲	ủy
-（廣州音）	芔	úy
-（廣州音）	芔	ủy
-（南寧音）	芔	ủy
-（廣州音）	蒍	ũy/vỹ
-（廣州音）	蒍	ủy
-（南寧音）	蒍	ủy
-（廣州音）	蔿	ủy
-（南寧音）	蔿	ủy
-（廣州音）	諉	ủy
-（台山音）	諉	ủy
-（欽州音）	諉	ủy
-（南寧音）	諉	ủy
-（廣州音）	譭	ủy
-（南寧音）	譭	ủy
-（廣州音）	骩	ủy
-（廣州音）	骪	ủy
-（廣州音）	骫	ủy
-（南寧音）	骫	ủy
-（廣州音）	㕀	úy
-（廣州音）	㜇	úy
-（廣州音）	㟪	úy
-（廣州音）	㬩	úy
-（廣州音）	㷉	úy
-（廣州音）	䂕	úy
-（廣州音）	䙆	úy
-（廣州音）	䮹	úy
-（廣州音）	䲁	úy
-（欽州音）	䲁	úy
-（南寧音）	䲁	úy
-（廣州音）	䵳	úy
-（廣州音）	叞	úy
-（廣州音）	嘒	úy
-（廣州音）	嚖	úy
-（廣州音）	墛	úy
-（廣州音）	嬒	úy
-（廣州音）	尉	úy
+（南寧音）	猥	úy/vý
+（廣州音）	碨	úy/vý
+（廣州音）	碨	ủy/vỷ
+（台山音）	碨	vỵ
+（南寧音）	碨	ủy/vỷ
+（南寧音）	碨	úy/vý
+（廣州音）	腲	ủy/vỷ
+（廣州音）	芔	úy/vý
+（廣州音）	芔	ủy/vỷ
+（南寧音）	芔	ủy/vỷ
+（廣州音）	蒍	vỹ
+（廣州音）	蒍	ủy/vỷ
+（南寧音）	蒍	ủy/vỷ
+（廣州音）	蔿	ủy/vỷ
+（南寧音）	蔿	ủy/vỷ
+（廣州音）	諉	ủy/vỷ
+（台山音）	諉	ủy/vỷ
+（欽州音）	諉	ủy/vỷ
+（南寧音）	諉	ủy/vỷ
+（廣州音）	譭	ủy/vỷ
+（南寧音）	譭	ủy/vỷ
+（廣州音）	骩	ủy/vỷ
+（廣州音）	骪	ủy/vỷ
+（廣州音）	骫	ủy/vỷ
+（南寧音）	骫	ủy/vỷ
+（廣州音）	㕀	úy/vý
+（廣州音）	㜇	úy/vý
+（廣州音）	㟪	úy/vý
+（廣州音）	㬩	úy/vý
+（廣州音）	㷉	úy/vý
+（廣州音）	䂕	úy/vý
+（廣州音）	䙆	úy/vý
+（廣州音）	䮹	úy/vý
+（廣州音）	䲁	úy/vý
+（欽州音）	䲁	úy/vý
+（南寧音）	䲁	úy/vý
+（廣州音）	䵳	úy/vý
+（廣州音）	叞	úy/vý
+（廣州音）	嘒	úy/vý
+（廣州音）	嚖	úy/vý
+（廣州音）	墛	úy/vý
+（廣州音）	嬒	úy/vý
+（廣州音）	尉	úy/vý
 （廣州音）	尉	vât
 （廣州音）	尉	vận
 （台山音）	尉	vut
-（台山音）	尉	úy
-（欽州音）	尉	úy
-（南寧音）	尉	úy
+（台山音）	尉	úy/vý
+（欽州音）	尉	úy/vý
+（南寧音）	尉	úy/vý
 （南寧音）	尉	vât
-（廣州音）	嵔	úy
-（廣州音）	嶎	úy
-（廣州音）	徻	úy
+（廣州音）	嵔	úy/vý
+（廣州音）	嶎	úy/vý
+（廣州音）	徻	úy/vý
 （廣州音）	徻	vúi
-（廣州音）	慧	úy
-（廣州音）	慧	ụy/vỵ
+（廣州音）	慧	úy/vý
+（廣州音）	慧	vỵ
 （台山音）	慧	phị
 （欽州音）	慧	vùi
 （南寧音）	慧	(常)úy
 （南寧音）	慧	ụy
-（廣州音）	慰	úy
-（台山音）	慰	úy
-（欽州音）	慰	úy
-（南寧音）	慰	úy
-（廣州音）	懀	úy
-（廣州音）	暳	úy
-（廣州音）	泋	úy
-（廣州音）	犚	úy
-（廣州音）	獩	úy
-（廣州音）	畏	úy
-（台山音）	畏	úy
-（欽州音）	畏	úy
-（南寧音）	畏	úy
-（廣州音）	穢	úy
+（廣州音）	慰	úy/vý
+（台山音）	慰	úy/vý
+（欽州音）	慰	úy/vý
+（南寧音）	慰	úy/vý
+（廣州音）	懀	úy/vý
+（廣州音）	暳	úy/vý
+（廣州音）	泋	úy/vý
+（廣州音）	犚	úy/vý
+（廣州音）	獩	úy/vý
+（廣州音）	畏	úy/vý
+（台山音）	畏	úy/vý
+（欽州音）	畏	úy/vý
+（南寧音）	畏	úy/vý
+（廣州音）	穢	úy/vý
 （台山音）	穢	vói
-（台山音）	穢	úy
-（欽州音）	穢	úy
-（南寧音）	穢	úy
-（廣州音）	罻	úy
+（台山音）	穢	úy/vý
+（欽州音）	穢	úy/vý
+（南寧音）	穢	úy/vý
+（廣州音）	罻	úy/vý
 （廣州音）	罻	vât
-（台山音）	罻	úy
-（廣州音）	翽	úy
-（南寧音）	翽	úy
-（廣州音）	蔚	úy
+（台山音）	罻	úy/vý
+（廣州音）	翽	úy/vý
+（南寧音）	翽	úy/vý
+（廣州音）	蔚	úy/vý
 （廣州音）	蔚	vât
-（台山音）	蔚	úy
-（欽州音）	蔚	úy
+（台山音）	蔚	úy/vý
+（欽州音）	蔚	úy/vý
 （欽州音）	蔚	vât
-（南寧音）	蔚	úy
+（南寧音）	蔚	úy/vý
 （南寧音）	蔚	vât
-（廣州音）	薉	úy
-（台山音）	薉	úy
-（廣州音）	藯	úy
-（廣州音）	螱	úy
-（南寧音）	螱	úy
-（廣州音）	褽	úy
-（廣州音）	諱	úy
-（廣州音）	諱	ũy/vỹ
+（廣州音）	薉	úy/vý
+（台山音）	薉	úy/vý
+（廣州音）	藯	úy/vý
+（廣州音）	螱	úy/vý
+（南寧音）	螱	úy/vý
+（廣州音）	褽	úy/vý
+（廣州音）	諱	úy/vý
+（廣州音）	諱	vỹ
 （台山音）	諱	phí
-（台山音）	諱	ủy
+（台山音）	諱	ủy/vỷ
 （欽州音）	諱	ùy
 （南寧音）	諱	ụy
-（廣州音）	鐬	úy
-（廣州音）	霨	úy
-（南寧音）	霨	úy
-（廣州音）	餵	úy
-（台山音）	餵	úy
-（欽州音）	餵	úy
-（南寧音）	餵	úy
-（廣州音）	饖	úy
-（廣州音）	𡜦	úy
-（廣州音）	𣻷	úy
-（廣州音）	𥳀	úy
-（廣州音）	𧬨	úy
+（廣州音）	鐬	úy/vý
+（廣州音）	霨	úy/vý
+（南寧音）	霨	úy/vý
+（廣州音）	餵	úy/vý
+（台山音）	餵	úy/vý
+（欽州音）	餵	úy/vý
+（南寧音）	餵	úy/vý
+（廣州音）	饖	úy/vý
+（廣州音）	𡜦	úy/vý
+（廣州音）	𣻷	úy/vý
+（廣州音）	𥳀	úy/vý
+（廣州音）	𧬨	úy/vý
 （廣州音）	㗹	ùy
 （廣州音）	䑊	ùy
 （廣州音）	䔺	ùy
@@ -63519,51 +63521,51 @@
 （廣州音）	䝐	ùy
 （廣州音）	䧦	ùy
 （廣州音）	喡	ùy
-（廣州音）	喡	ụy/vỵ
+（廣州音）	喡	vỵ
 （廣州音）	圍	ùy
-（台山音）	圍	ùy/vỳ
+（台山音）	圍	vỳ
 （欽州音）	圍	ùy
 （南寧音）	圍	ùy
 （廣州音）	媁	ùy
-（欽州音）	媁	uy
-（南寧音）	媁	uy
+（欽州音）	媁	uy/vy
+（南寧音）	媁	uy/vy
 （廣州音）	帷	ùy
-（台山音）	帷	ùy/vỳ
+（台山音）	帷	vỳ
 （欽州音）	帷	ùy
 （南寧音）	帷	ùy
 （廣州音）	幃	ùy
-（台山音）	幃	ùy/vỳ
+（台山音）	幃	vỳ
 （欽州音）	幃	ùy
 （南寧音）	幃	ùy
 （廣州音）	惟	ùy
-（台山音）	惟	ùy/vỳ
+（台山音）	惟	vỳ
 （欽州音）	惟	ùy
 （南寧音）	惟	ùy
 （廣州音）	欈	chúi
 （廣州音）	欈	ùy
 （廣州音）	湋	ùy
-（廣州音）	湋	ũy/vỹ
+（廣州音）	湋	vỹ
 （南寧音）	湋	ùy
 （廣州音）	潿	ùy
-（台山音）	潿	ùy/vỳ
+（台山音）	潿	vỳ
 （欽州音）	潿	ùy
 （南寧音）	潿	ùy
 （廣州音）	濰	ùy
-（台山音）	濰	ùy/vỳ
+（台山音）	濰	vỳ
 （欽州音）	濰	ùy
 （南寧音）	濰	ùy
 （廣州音）	為	ùy
-（廣州音）	為	ụy/vỵ
-（台山音）	為	ùy/vỳ
-（台山音）	為	ụy/vỵ
+（廣州音）	為	vỵ
+（台山音）	為	vỳ
+（台山音）	為	vỵ
 （欽州音）	為	ùy
 （南寧音）	為	(白)uy
 （南寧音）	為	ùy
 （南寧音）	為	ụy
 （廣州音）	爲	ùy
-（廣州音）	爲	ụy/vỵ
-（台山音）	爲	ùy/vỳ
-（台山音）	爲	ụy/vỵ
+（廣州音）	爲	vỵ
+（台山音）	爲	vỳ
+（台山音）	爲	vỵ
 （欽州音）	爲	ùy
 （南寧音）	爲	(白)uy
 （南寧音）	爲	ùy
@@ -63572,16 +63574,16 @@
 （廣州音）	琟	ùy
 （南寧音）	琟	ùy
 （廣州音）	蓶	ùy
-（廣州音）	蓶	ũy/vỹ
+（廣州音）	蓶	vỹ
 （廣州音）	讉	ùy
 （廣州音）	違	ùy
-（台山音）	違	ùy/vỳ
+（台山音）	違	vỳ
 （欽州音）	違	ùy
 （南寧音）	違	ùy
 （廣州音）	遺	ùy
-（廣州音）	遺	ụy/vỵ
-（台山音）	遺	ùy/vỳ
-（台山音）	遺	ụy/vỵ
+（廣州音）	遺	vỵ
+（台山音）	遺	vỳ
+（台山音）	遺	vỵ
 （欽州音）	遺	ùy
 （南寧音）	遺	(又)yì
 （南寧音）	遺	ùy
@@ -63590,14 +63592,14 @@
 （廣州音）	醀	chúi
 （廣州音）	醀	ùy
 （廣州音）	鍏	ùy
-（廣州音）	鍏	ũy/vỹ
+（廣州音）	鍏	vỹ
 （廣州音）	闈	ùy
-（台山音）	闈	ùy/vỳ
+（台山音）	闈	vỳ
 （欽州音）	闈	ùy
 （南寧音）	闈	ùy
 （廣州音）	韋	ùy
-（廣州音）	韋	ũy/vỹ
-（台山音）	韋	ủy
+（廣州音）	韋	vỹ
+（台山音）	韋	ủy/vỷ
 （欽州音）	韋	ùy
 （南寧音）	韋	ùy
 （廣州音）	鮠	ùy
@@ -63605,146 +63607,146 @@
 （南寧音）	鮠	ngày
 （廣州音）	𡺨	ùy
 （廣州音）	𤔡	ùy
-（廣州音）	㖐	ũy/vỹ
-（廣州音）	㙔	ũy/vỹ
-（廣州音）	㨊	ũy/vỹ
-（廣州音）	㬙	ũy/vỹ
-（廣州音）	䈧	ũy/vỹ
-（廣州音）	䍷	ũy/vỹ
-（廣州音）	䪘	ũy/vỹ
-（廣州音）	䵋	ũy/vỹ
-（廣州音）	偉	ũy/vỹ
-（台山音）	偉	ủy
-（欽州音）	偉	ủy
-（南寧音）	偉	ủy
-（廣州音）	儰	ũy/vỹ
-（南寧音）	儰	ủy
-（廣州音）	徫	ũy/vỹ
-（廣州音）	愇	ũy/vỹ
-（廣州音）	暐	ũy/vỹ
-（南寧音）	暐	ủy
-（廣州音）	濻	ũy/vỹ
-（廣州音）	瀢	ũy/vỹ
-（廣州音）	煒	ũy/vỹ
-（台山音）	煒	ủy
-（欽州音）	煒	ủy
-（南寧音）	煒	ủy
-（廣州音）	瑋	ũy/vỹ
-（台山音）	瑋	ủy
-（欽州音）	瑋	ủy
-（南寧音）	瑋	ủy
-（廣州音）	緯	ũy/vỹ
-（廣州音）	緯	ụy/vỵ
-（台山音）	緯	ủy
-（欽州音）	緯	ủy
-（南寧音）	緯	ủy
-（廣州音）	葦	ũy/vỹ
-（台山音）	葦	ủy
-（欽州音）	葦	ủy
+（廣州音）	㖐	vỹ
+（廣州音）	㙔	vỹ
+（廣州音）	㨊	vỹ
+（廣州音）	㬙	vỹ
+（廣州音）	䈧	vỹ
+（廣州音）	䍷	vỹ
+（廣州音）	䪘	vỹ
+（廣州音）	䵋	vỹ
+（廣州音）	偉	vỹ
+（台山音）	偉	ủy/vỷ
+（欽州音）	偉	ủy/vỷ
+（南寧音）	偉	ủy/vỷ
+（廣州音）	儰	vỹ
+（南寧音）	儰	ủy/vỷ
+（廣州音）	徫	vỹ
+（廣州音）	愇	vỹ
+（廣州音）	暐	vỹ
+（南寧音）	暐	ủy/vỷ
+（廣州音）	濻	vỹ
+（廣州音）	瀢	vỹ
+（廣州音）	煒	vỹ
+（台山音）	煒	ủy/vỷ
+（欽州音）	煒	ủy/vỷ
+（南寧音）	煒	ủy/vỷ
+（廣州音）	瑋	vỹ
+（台山音）	瑋	ủy/vỷ
+（欽州音）	瑋	ủy/vỷ
+（南寧音）	瑋	ủy/vỷ
+（廣州音）	緯	vỹ
+（廣州音）	緯	vỵ
+（台山音）	緯	ủy/vỷ
+（欽州音）	緯	ủy/vỷ
+（南寧音）	緯	ủy/vỷ
+（廣州音）	葦	vỹ
+（台山音）	葦	ủy/vỷ
+（欽州音）	葦	ủy/vỷ
 （南寧音）	葦	ùy
-（廣州音）	韑	ũy/vỹ
-（廣州音）	韙	ũy/vỹ
-（台山音）	韙	ủy
-（欽州音）	韙	ủy
-（南寧音）	韙	ủy
-（廣州音）	韡	ũy/vỹ
-（台山音）	韡	ủy
-（南寧音）	韡	ủy
-（廣州音）	颹	ũy/vỹ
-（廣州音）	𥯤	ũy/vỹ
-（廣州音）	𨗨	ũy/vỹ
-（廣州音）	㒞	ụy/vỵ
-（廣州音）	㤬	ụy/vỵ
-（廣州音）	㥜	ụy/vỵ
-（廣州音）	㥣	ụy/vỵ
-（廣州音）	㦣	ụy/vỵ
-（廣州音）	㨹	ụy/vỵ
-（廣州音）	㩨	ụy/vỵ
-（廣州音）	㻰	ụy/vỵ
-（廣州音）	䎚	ụy/vỵ
-（廣州音）	䗽	ụy/vỵ
-（廣州音）	䘙	ụy/vỵ
-（廣州音）	䜜	ụy/vỵ
-（廣州音）	䡺	ụy/vỵ
-（廣州音）	䦄	ụy/vỵ
-（廣州音）	䧥	ụy/vỵ
-（廣州音）	䪋	ụy/vỵ
-（廣州音）	䬑	ụy/vỵ
-（廣州音）	僡	ụy/vỵ
+（廣州音）	韑	vỹ
+（廣州音）	韙	vỹ
+（台山音）	韙	ủy/vỷ
+（欽州音）	韙	ủy/vỷ
+（南寧音）	韙	ủy/vỷ
+（廣州音）	韡	vỹ
+（台山音）	韡	ủy/vỷ
+（南寧音）	韡	ủy/vỷ
+（廣州音）	颹	vỹ
+（廣州音）	𥯤	vỹ
+（廣州音）	𨗨	vỹ
+（廣州音）	㒞	vỵ
+（廣州音）	㤬	vỵ
+（廣州音）	㥜	vỵ
+（廣州音）	㥣	vỵ
+（廣州音）	㦣	vỵ
+（廣州音）	㨹	vỵ
+（廣州音）	㩨	vỵ
+（廣州音）	㻰	vỵ
+（廣州音）	䎚	vỵ
+（廣州音）	䗽	vỵ
+（廣州音）	䘙	vỵ
+（廣州音）	䜜	vỵ
+（廣州音）	䡺	vỵ
+（廣州音）	䦄	vỵ
+（廣州音）	䧥	vỵ
+（廣州音）	䪋	vỵ
+（廣州音）	䬑	vỵ
+（廣州音）	僡	vỵ
 （台山音）	僡	phị
-（廣州音）	儶	ụy/vỵ
-（廣州音）	媦	ụy/vỵ
-（廣州音）	寭	ụy/vỵ
-（廣州音）	彚	ụy/vỵ
+（廣州音）	儶	vỵ
+（廣州音）	媦	vỵ
+（廣州音）	寭	vỵ
+（廣州音）	彚	vỵ
 （台山音）	彚	vọi
-（廣州音）	恵	ụy/vỵ
-（廣州音）	惠	ụy/vỵ
+（廣州音）	恵	vỵ
+（廣州音）	惠	vỵ
 （台山音）	惠	phị
 （欽州音）	惠	vùi
 （南寧音）	惠	ụy
-（廣州音）	憓	ụy/vỵ
+（廣州音）	憓	vỵ
 （台山音）	憓	phị
 （南寧音）	憓	ụy
-（廣州音）	懳	ụy/vỵ
-（廣州音）	橞	ụy/vỵ
+（廣州音）	懳	vỵ
+（廣州音）	橞	vỵ
 （南寧音）	橞	ụy
-（廣州音）	渭	ụy/vỵ
-（台山音）	渭	ụy/vỵ
+（廣州音）	渭	vỵ
+（台山音）	渭	vỵ
 （欽州音）	渭	ùy
 （南寧音）	渭	ụy
-（廣州音）	潓	ụy/vỵ
+（廣州音）	潓	vỵ
 （台山音）	潓	phị
 （南寧音）	潓	ụy
-（廣州音）	煟	ụy/vỵ
+（廣州音）	煟	vỵ
 （南寧音）	煟	ụy
-（廣州音）	熭	ụy/vỵ
-（廣州音）	猬	ụy/vỵ
-（廣州音）	璏	ụy/vỵ
-（廣州音）	璤	ụy/vỵ
-（廣州音）	緭	ụy/vỵ
-（廣州音）	胃	ụy/vỵ
-（台山音）	胃	ụy/vỵ
+（廣州音）	熭	vỵ
+（廣州音）	猬	vỵ
+（廣州音）	璏	vỵ
+（廣州音）	璤	vỵ
+（廣州音）	緭	vỵ
+（廣州音）	胃	vỵ
+（台山音）	胃	vỵ
 （欽州音）	胃	ùy
 （南寧音）	胃	ụy
-（廣州音）	蕙	ụy/vỵ
+（廣州音）	蕙	vỵ
 （台山音）	蕙	phị
 （欽州音）	蕙	vùi
 （南寧音）	蕙	ụy
-（廣州音）	蝟	ụy/vỵ
-（台山音）	蝟	ụy/vỵ
+（廣州音）	蝟	vỵ
+（台山音）	蝟	vỵ
 （欽州音）	蝟	ùy
 （南寧音）	蝟	(常)úy
 （南寧音）	蝟	ụy
-（廣州音）	蟪	ụy/vỵ
+（廣州音）	蟪	vỵ
 （台山音）	蟪	phị
 （欽州音）	蟪	vùi
 （南寧音）	蟪	ụy
-（廣州音）	衛	ụy/vỵ
-（台山音）	衛	ụy/vỵ
+（廣州音）	衛	vỵ
+（台山音）	衛	vỵ
 （欽州音）	衛	ùy
 （南寧音）	衛	ụy
-（廣州音）	衞	ụy/vỵ
+（廣州音）	衞	vỵ
 （南寧音）	衞	ụy
-（廣州音）	謂	ụy/vỵ
-（台山音）	謂	ụy/vỵ
+（廣州音）	謂	vỵ
+（台山音）	謂	vỵ
 （欽州音）	謂	ùy
 （南寧音）	謂	ụy
-（廣州音）	譓	ụy/vỵ
+（廣州音）	譓	vỵ
 （南寧音）	譓	ụy
-（廣州音）	譿	ụy/vỵ
-（廣州音）	讏	ụy/vỵ
-（廣州音）	躗	ụy/vỵ
-（廣州音）	躛	ụy/vỵ
-（廣州音）	軎	ụy/vỵ
-（台山音）	軎	ụy/vỵ
+（廣州音）	譿	vỵ
+（廣州音）	讏	vỵ
+（廣州音）	躗	vỵ
+（廣州音）	躛	vỵ
+（廣州音）	軎	vỵ
+（台山音）	軎	vỵ
 （欽州音）	軎	ùy
-（廣州音）	轊	ụy/vỵ
-（廣州音）	𡣺	ụy/vỵ
-（廣州音）	𣖜	ụy/vỵ
-（廣州音）	𤪳	ụy/vỵ
-（廣州音）	𦒄	ụy/vỵ
-（廣州音）	𨩋	ụy/vỵ
-（廣州音）	𨯚	ụy/vỵ
+（廣州音）	轊	vỵ
+（廣州音）	𡣺	vỵ
+（廣州音）	𣖜	vỵ
+（廣州音）	𤪳	vỵ
+（廣州音）	𦒄	vỵ
+（廣州音）	𨩋	vỵ
+（廣州音）	𨯚	vỵ
 （廣州音）	𤷇	vặc
 （廣州音）	㚃	vân
 （廣州音）	㬈	vân
@@ -64824,7 +64826,7 @@
 （廣州音）	㙗	vui
 （廣州音）	䋿	vui
 （廣州音）	偎	vui
-（台山音）	偎	úy
+（台山音）	偎	úy/vý
 （欽州音）	偎	vui
 （南寧音）	偎	(又)úy
 （南寧音）	偎	vôi
@@ -64836,13 +64838,13 @@
 （南寧音）	渨	vôi
 （廣州音）	煨	vui
 （台山音）	煨	vói
-（台山音）	煨	úy
+（台山音）	煨	úy/vý
 （欽州音）	煨	vui
 （南寧音）	煨	vôi
 （廣州音）	燰	vui
 （廣州音）	葨	vui
 （廣州音）	隈	vui
-（台山音）	隈	úy
+（台山音）	隈	úy/vý
 （欽州音）	隈	vui
 （南寧音）	隈	vôi
 （廣州音）	㛱	vủi
@@ -71152,7 +71154,7 @@
 （台山音）	𣛒	lại
 （台山音）	𣤵	yỉnh
 （南寧音）	𣛒	lạy/lệ
-（台山音）	𣨙	ủy
+（台山音）	𣨙	ủy/vỷ
 （台山音）	𣩟	ánh
 （台山音）	𣯨	túng
 （台山音）	𣰽	khùi
@@ -71167,7 +71169,7 @@
 （台山音）	𤁽	yình
 （台山音）	𤃀	lại
 （台山音）	𤇶	chính
-（台山音）	𤈫	úy
+（台山音）	𤈫	úy/vý
 （台山音）	𤉡	slũ
 （台山音）	𤏾	chính
 （台山音）	𤑄	ngịch
