--- a/quocngutihamchauva.yaml
+++ b/quocngutihamchauva.yaml
@@ -7895,66 +7895,66 @@
 猾	vạt
 滑	vạt
 螖	vạt
-崴	uy
-威	uy
-逶	uy
-葳	uy
-喴	uy
-媙	uy
-媁	uy
-委	uy
-諉	ủy
-卉	ủy
-喟	ủy
-偉	ủy
-葦	ủy
-緯	ủy
-瑋	ủy
-委	ủy
-煒	ủy
-萎	ủy
-韙	ủy
-痿	ủy
-鮪	ủy
-喂	ủy
-虺	ủy
-芛	ủy
-噦	úy
-穢	úy
-畏	úy
-尉	úy
-䲁	úy
-喂	úy
-餵	úy
-蔚	úy
-慰	úy
-軎	ùy/vỳ
-諱	ùy/vỳ
-恚	ùy/vỳ
-韋	ùy/vỳ
-為	ùy/vỳ
-違	ùy/vỳ
-囗	ùy/vỳ
-圍	ùy/vỳ
-幃	ùy/vỳ
-闈	ùy/vỳ
-溈	ùy/vỳ
-潙	ùy/vỳ
-桅	ùy/vỳ
-潿	ùy/vỳ
-唯	ùy/vỳ
-帷	ùy/vỳ
-惟	ùy/vỳ
-維	ùy/vỳ
-爲	ùy/vỳ
-濰	ùy/vỳ
-衛	ùy/vỳ
-位	ùy/vỳ
-胃	ùy/vỳ
-謂	ùy/vỳ
-蝟	ùy/vỳ
-渭	ùy/vỳ
-遺	ùy/vỳ
+崴	uy/vy
+威	uy/vy
+逶	uy/vy
+葳	uy/vy
+喴	uy/vy
+媙	uy/vy
+媁	uy/vy
+委	uy/vy
+諉	ủy/vỷ
+卉	ủy/vỷ
+喟	ủy/vỷ
+偉	ủy/vỷ
+葦	ủy/vỷ
+緯	ủy/vỷ
+瑋	ủy/vỷ
+委	ủy/vỷ
+煒	ủy/vỷ
+萎	ủy/vỷ
+韙	ủy/vỷ
+痿	ủy/vỷ
+鮪	ủy/vỷ
+喂	ủy/uẩy
+虺	ủy/vỷ
+芛	ủy/vỷ
+噦	úy/vý
+穢	úy/vý
+畏	úy/vý
+尉	úy/vý
+䲁	úy/vý
+喂	úy/uấy
+餵	úy/vý
+蔚	úy/vý
+慰	úy/vý
+軎	vỳ
+諱	vỳ
+恚	vỳ
+韋	vỳ
+為	vỳ
+違	vỳ
+囗	vỳ
+圍	vỳ
+幃	vỳ
+闈	vỳ
+溈	vỳ
+潙	vỳ
+桅	vỳ
+潿	vỳ
+唯	vỳ
+帷	vỳ
+惟	vỳ
+維	vỳ
+爲	vỳ
+濰	vỳ
+衛	vỳ
+位	vỳ
+胃	vỳ
+謂	vỳ
+蝟	vỳ
+渭	vỳ
+遺	vỳ
 溫	vân
 殟	vân
 瘟	vân
