--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -12106,74 +12106,74 @@
 撝	(白)uy
 為	(白)uy
 爲	(白)uy
-倭	uy
-委	uy
-威	uy
-媁	uy
-媙	uy
-崴	uy
+倭	uy/vy
+委	uy/vy
+威	uy/vy
+媁	uy/vy
+媙	uy/vy
+崴	uy/vy
 揮	(白)uy
 暉	(白)uy
 琿	(白)uy
 翬	(白)uy
-葳	uy
-蝛	uy
+葳	uy/vy
+蝛	uy/vy
 褘	(白)uy
-覣	uy
+覣	uy/vy
 輝	(白)uy
-逶	uy
+逶	uy/vy
 隳	(白)uy
 麾	(白)uy
 噅	(白)uy
-癐	uy
+癐	uy/vy
 煇	(白)uy
-偉	ủy
+偉	ủy/vỷ
 位	(白)ủy
-儰	ủy
-卉	ủy
-唯	ủy
-喂	(語)ủy
-委	ủy
-廆	ủy
-毀	ủy
-燬	ủy
-譭	ủy
-煒	ủy
-瑋	ủy
-痿	ủy
-碨	ủy
-緯	ủy
-芔	ủy
-萎	ủy
-薳	ủy
-虫	ủy
-虺	ủy
-諉	ủy
-韡	ủy
-韙	ủy
-骫	ủy
-蒍	ủy
-蔿	ủy
-暐	ủy
+儰	ủy/vỷ
+卉	ủy/vỷ
+唯	ủy/vỷ
+喂	(語)ủy/uẩy
+委	ủy/vỷ
+廆	ủy/vỷ
+毀	ủy/vỷ
+燬	ủy/vỷ
+譭	ủy/vỷ
+煒	ủy/vỷ
+瑋	ủy/vỷ
+痿	ủy/vỷ
+碨	ủy/vỷ
+緯	ủy/vỷ
+芔	ủy/vỷ
+萎	ủy/vỷ
+薳	ủy/vỷ
+虫	ủy/vỷ
+虺	ủy/vỷ
+諉	ủy/vỷ
+韡	ủy/vỷ
+韙	ủy/vỷ
+骫	ủy/vỷ
+蒍	ủy/vỷ
+蔿	ủy/vỷ
+暐	ủy/vỷ
 偎	(又)úy
-噦	úy
-喂	úy
-餵	úy
-尉	úy
+噦	úy/vý
+喂	úy/uấy
+餵	úy/vý
+尉	úy/vý
 慧	(常)úy
-慰	úy
-猥	úy
+慰	úy/vý
+猥	úy/vý
 蝟	(常)úy
-畏	úy
-磑	úy
-碨	úy
-穢	úy
-翽	úy
-蔚	úy
-螱	úy
-霨	úy
-餧	úy
-䲁	úy
+畏	úy/vý
+磑	úy/vý
+碨	úy/vý
+穢	úy/vý
+翽	úy/vý
+蔚	úy/vý
+螱	úy/vý
+霨	úy/vý
+餧	úy/vý
+䲁	úy/vý
 為	ùy
 爲	ùy
 唯	ùy
@@ -16926,7 +16926,7 @@
 縱身	chụng sân
 縱談	chụng thàm
 翟茀	địch phât
-翬翟	uy địch
+翬翟	uy/vy địch
 墨翟	mặc địch
 翟車	địch xe
 翹腳	heo kước
@@ -17350,7 +17350,7 @@
 藉助	ché chọ
 藉外力	ché ngọi lịch
 狼藉	lòng chịch
-慰藉	úy chịch
+慰藉	úy/vý chịch
 藉藉	chịch chịch
 寶藏	bổ chọng
 西藏	slay chọng/slê chọng
@@ -17492,7 +17492,7 @@
 蛇頭	sè thầu
 杯弓蛇影	bôi kung sè yỉnh
 虛與委蛇	hư ữ ủy yì
-委蛇	ủy yì
+委蛇	ủy/vỷ yì
 蛤乸	kấp nả
 蛤蜊	kấp lì
 蛤蠣	kấp lạy/kấp lệ
@@ -18214,7 +18214,7 @@
 迤南	yĩ nàm
 迤西	yĩ slay/yĩ slê
 迤北	yĩ băc
-逶迤	uy yì
+逶迤	uy/vy yì
 製造	cháy chộ/chế chộ
 造化	chộ phá
 造就	chộ chậu
@@ -18705,7 +18705,7 @@
 靡靡之音	mĩ mĩ chi yâm
 風靡	phung mĩ
 風靡一時	phung mĩ yât sì
-委靡不振	ủy mĩ bât chấn
+委靡不振	ủy/vỷ mĩ bât chấn
 靡日不思	mĩ yật bât su
 靡日不思	mĩ yật bât si
 隨風而靡	xồi phung yì mĩ
